refactor:DTO->record로 구현